Added endpoint and UI for loading user data

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
             <!-- All the symbols in portfolio -->
             <div id="symbols-container" class="sb-container">
                 <p class="sb-title">Assets in Portfolio</p>
-                {{ asset_symbols_list|safe }}
+                <div id="symbols-list">
+                </div>
             </div>
         </div>
         <div id="widgets-container">
